# icequery

./: CMakeLists.txt  README.md  icequery.cpp
cmake/Modules/: FindICU.cmake
